--- a/gb/nf5775_9.md
+++ b/gb/nf5775_9.md
@@ -12,6 +12,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/10/7/n9710793.md#1" target="_blank">中共十九大前 习近平掌五大兵种军权</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/10/7/n9710793.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/10/2a16ee5991b6caf8b439695de55223de-150x120.jpg" align ="left"></a>中共十九大召开前夕，习近平对中共军方高层调整也逐渐到位，其中陆、海、空、火箭军、战略支援部队五大兵种司令员全被指是“习家军”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年10月08日 4:25 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/9/30/n9686803.md#1" target="_blank">27名中共19大代表被取消资格 含军方3中将</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/9/30/n9686803.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2006/08/60803223419731-150x120.jpg" align ="left"></a>中共十九大即将召开，中共十九大代表刚刚出炉。据中组部高官透露，已有27名十九大代表因为遭到调查，被取消代表资格。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月30日 11:31 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/9/28/n9680428.md#1" target="_blank">外媒追问房峰辉张阳去向 中共国防部回应</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/9/28/n9680428.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/09/zhang-ysng-GettyImages-163767151-2-150x120.jpg" align ="left"></a>中共十九大召开前夕，中共军委委员房峰辉、张阳分别被免去军委联合参谋部参谋长、政治工作部主任后，去向成谜。9月28日，外媒再次追问中共国防部发言人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月29日 4:51 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/10/31/n9788879.md#1" target="_blank">险成周永康夺权工具 武警传将大缩编</a><br></h3>在北京举行的中共人大会议上，将审议有关武警部队改革的相关议案，传武警部队将会大缩编。中共武警部队过去被江泽民的亲信前政法委书记周永康把持，曾多次参与江派未遂政变，差点沦为周永康等“阴谋篡党夺权”的工具。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年10月31日 7:13 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/10/27/n9779199.md#1" target="_blank">习近平要求军队高层“六个必须” 忠诚居首</a><br></h3>中共十九届一中全会闭幕次日，习近平在军队领导干部会议上发表讲话，强调全面“从严治军”，军队高层必须忠诚、善谋打仗、厉行法治等。有分析认为，其要求的“忠诚”最为关键。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年10月28日 9:24 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/10/26/n9775254.md#1" target="_blank">军委纪委书记罕见入军委 或强化军中反腐</a><br></h3>近期颇受重用的中共军委纪委书记张升民中将日前罕见进入中共中央军委。外界关注，习近平或由此强化军中反腐“打虎”力度。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年10月27日 8:21 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/10/24/n9766875.md#1" target="_blank">曾是阅兵总指挥 宋普选蹊跷落选中委</a><br></h3>中共十九大24日结束当天，公布了204名中央委员，当中有不少高层将领，现任中央军事委员会多名成员没有上榜，外界也发现，中共军委后勤保障部部长宋普选落选，让外界大感意外。此外，中部战区政委殷方龙也不在其中。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年10月25日 6:28 AM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/9/24/n9664818.md#1" target="_blank">宋普选所在战区5将领调整 2人或进军委</a><br></h3>曾陪同习近平阅兵的宋普选，其主政的中共北部战区的5名将官先后获得晋升，包括宋普选本人及战区的陆、海、空司令员及战区陆军领导郑家概，其中宋普选及新任空军司令员丁来杭有望成为中共十九大军委委员。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月25日 2:56 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/9/24/n9664793.md#1" target="_blank">武警高层异动 秦天任副司令 郑家概任参谋长</a><br></h3>中共十九大前，武警部队再次出现异动。日前，中共红二代、60岁的武警部队参谋长秦天中将转任副司令员，55岁的北部战区陆军领导郑家概少将接任秦天的空缺。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月25日 1:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/9/24/n9663606.md#1" target="_blank">传中共军委委员有新变动 由八人减为四人</a><br></h3>“十九大”前，中共军方高层人事调整频繁。近日又有最新消息称，中共新军委仍维持两名副主席，但军委委员人数将由8人变为4人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月24日 4:50 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/17/9/18/n9642256.md#1" target="_blank">中共军方高层频换人 7名军委委员职务被调整</a><br></h3>中共十九大前，军方高层密集换人。9月18日，中共战略支援部队副司令员李尚福接替张又侠任军委装备发展部部长。到目前，已有7名中央军委委员的职务被调整。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月18日 4:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_10.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_9.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_9.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_9.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf5775_9.htm">https://www.epochtimes.com/gb/nf5775_9.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
